--- a/Final_snake_bite(sub)/re_snake_bite/re_snake_bite.vcxproj.filters
+++ b/Final_snake_bite(sub)/re_snake_bite/re_snake_bite.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="screen.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="setConsole.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="screen.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Musoeun.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="setConsole.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
